--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body {
 h1 {
   font-size: 50px;
 }
+h2 {
+  font-size: 40px;
+}
 .orange-color {
   color: orange;
 }
@@ -35,4 +38,33 @@ h1 {
   background-image: url(images/dream-bg.png);
   background-repeat: no-repeat;
   background-position: right;
+}
+.expareance {
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#expareance {
+  text-align: center;
+}
+.expareance-box {
+  width: 45%;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding: 20px;
+  border-radius: 17px;
+  box-shadow: 10px 10px 50px grey;
+}
+#full-stak-devoloper {
+  border-left: 7px solid;
+  border-image: linear-gradient(purple, tomato);
+  border-image-slice: 1;
+}
+#junior-web-developer {
+  border-left: 7px solid;
+  border-image: linear-gradient(blue, cyan);
+  border-image-slice: 1;
+}
+footer {
+  text-align: center;
 }
